--- a/EmpInfo/Views/Home/DormGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/DormGroupIndex.cshtml
@@ -59,7 +59,7 @@
                     <p class="text-center">宿舍维修申请</p>
                 </a>
             </div>
-            <div class="col-xs-4 col-sm-3 col-md-2">
+            @*<div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="#" class="closeLink">
                     <img src="@Url.Content("~/Content/images/book.png")" alt="book" class="center-block" />
                     <p class="text-center">宿舍来访预约</p>
@@ -80,7 +80,7 @@
                         <p class="text-center">宿舍快件寄存</p>
                     </a>
                 </div>
-            }
+            }*@
         </div>
     </div>
 </div>
