--- a/EmpInfo/Views/K3/AccountReset.cshtml
+++ b/EmpInfo/Views/K3/AccountReset.cshtml
@@ -6,7 +6,7 @@
     <style type="text/css">
         .accountName{
             cursor:pointer;
-        }        
+        }
     </style>
     }
 @section Scripts {
@@ -131,6 +131,7 @@
         <ol class="breadcrumb" style="margin:0;padding:0; background-color:transparent;">
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
+            <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公</a></li>
             <li class="active">K3重开通|重置密码</li>
         </ol>
     </div>
