--- a/EmpInfo/Views/Apply/BeginApplyAL.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyAL.cshtml
@@ -40,7 +40,7 @@
     <script src="@Url.Content("~/Scripts/webuploader.min.js")"></script>
 
     <script>
-
+        var queue;
         $(function () {
             $("#beginTimePicker,#endTimePicker").datetimepicker({
                 language: 'zh-CN',
@@ -65,7 +65,7 @@
 
             //选择部门
             $("#eDepName").on("click", function () {
-                openSelectDepDialog(function (selectedDep) {
+                openSelectDepDialog(0,function (selectedDep) {
                     console.log(selectedDep);
                     $("#eDepName").val(selectedDep.depLongName);
                     $("#eDepNum").val(selectedDep.depNum);
@@ -110,16 +110,27 @@
                     success: function (data) {
                         if (data.suc) {
                             var q = data.list;
+                            queue = q;
                             var div = "";
+                            var canSelectAuditor = false;
+                            var depNo = $("#eDepNum").val();
+                            if (depNo.indexOf("212") == 0 || depNo.indexOf("21501") == 0 || depNo.indexOf("10112") == 0) {
+                                canSelectAuditor = true;
+                            }
                             for (var i = 0; i < q.length; i++) {
-                                div += "<div>" + q[i].step + ". 【" + q[i].step_name + "】 " + q[i].auditors + "</div>";
+                                div += "<div>" + q[i].step + ".";                                
+                                div += "【" + q[i].step_name + "】 <span class='auditors'>" + q[i].auditors + "</span>";
+                                if (q[i].auditors.indexOf(";") >= 0 && q[i].countersign != true && canSelectAuditor) {
+                                    div += " <span class='changeAuditor text-primary' data-idx= '" + i + "' style='cursor:pointer;'>修改审核人</span>"
+                                }
+                                div += "</div>";
                             }
                             openConfirmDialog(div, function () {
                                 $("#apply_bt").button("loading");
                                 $.ajax({
                                     type: 'post',
                                     url: '@Url.Content("~/Apply/SaveApplyAL")',
-                                    data: formParam,
+                                    data: formParam + "&auditor_queues=" + JSON.stringify(queue),
                                     cache: false,
                                     dataType: 'json',
                                     success: function (data) {
@@ -143,10 +154,26 @@
                 });
             });
 
+            //选择审批人员
+            $("#confirm_content").on("click", ".changeAuditor", function () {
+                var idx = $(this).attr("data-idx");
+                var finalAuditors = $(this).parent().find(".auditors");
+                openSelectItemDialog(queue[idx].auditors, 1, 10, function (aus) {                    
+                    $(finalAuditors).html(aus);
+                    queue[idx].auditors = aus;
+                });
+            });
+
         });
+
+        
 
         //验证表单
         function validateForm() {
+            if ($("#eDepNum").val() == "") {
+                toastr.error("必须选择[所属部门]");
+                return false;
+            }
             if ($("#eLevel").val() == "") {
                 toastr.error("必须选择[职位级别]");
                 return false;
@@ -165,16 +192,19 @@
             }
             var days = $("#days").val(), hours = $("#hours").val();
             if (days == "") {
-                toastr.error("必须填写[工作日]天数");
+                toastr.error("必须填写[请假天数]");
                 return false;
             }
             if (isNaN(days)) {
-                toastr.error("[工作日]必须填写数字");
+                toastr.error("[请假天数]必须填写数字");
                 return false;
             }
             if (days < 0 || days % 1 != 0) {
-                toastr.error("[工作日]必须为正整数");
+                toastr.error("[请假天数]必须为正整数");
                 return false;
+            }
+            if (days > 300) {
+                toastr.error("[请假天数]必须少于300天")
             }
             if (hours == "") {
                 toastr.error("必须填写[小时]数");
@@ -183,6 +213,9 @@
             if (isNaN(hours) || hours < 0) {
                 toastr.error("[小时]必须填写大于0的数字");
                 return false;
+            }
+            if (hours > 24) {
+                toastr.error("[小时]必须少于24小时")
             }
             if ($($("input[name='leave_type']:checked")[0]).val() == "年假" && hours % 4 != 0) {
                 toastr.error("当[请假类型]是年假时，[小时]数必须是4的整数倍");
@@ -211,7 +244,7 @@
             }
             openMessageDialog("<div>名称：<span class='text-danger'>" + name + "</span></div><div>编码：<span class='text-danger'>" + no + "</span></div>", "当前所选部门信息");
         }
-    </script>
+</script>
 
     <script>
         $(function () {
@@ -293,8 +326,9 @@
                     $.post("@Url.Content("~/File/RemoveUploadedFile")", { sysNum: "@ViewData["sysNum"]", fileName: fileName }, function (data) {
                         if (data.suc) {
                             toastr.success("文件移除成功");
-                            uploader.removeFile(fileId);
+                            uploader.removeFile(fileId,true);
                             $(fileTD).parent().fadeOut(1000, function () {
+                                $(fileTD).parent().remove();
                                 var st = uploader.getStats();
                                 if (st.successNum == st.cancelNum) {
                                     $("#al_file_panel").fadeOut(1000);
@@ -401,20 +435,21 @@
                                 <input class="form-control" type="text" id="endTime" name="to_date" />
                                 <span class="input-group-addon"><span class="fa fa-calendar"></span> </span>
                             </div>
-                            <div style="display:inline-block;width:60%;">
+                            <div style="display:inline-block;width:50%;">
                                 <div class="input-group">
                                     <span class="input-group-addon">共</span>
                                     <input class="form-control" type="text" id="days" name="work_days" />
-                                    <span class="input-group-addon">工作日</span>
+                                    <span class="input-group-addon">天</span>
                                 </div>
                             </div>
-                            <div style="display:inline-block;width:38%;margin-left:-5px;">
+                            <div style="display:inline-block;width:48%;margin-left:-5px;">
                                 <div class="input-group">
                                     <input class="form-control" type="text" id="hours" name="work_hours" />
                                     <span class="input-group-addon">小时</span>
                                 </div>
                             </div>
                         </div>
+                        <p class="small text-danger"><i class="fa fa-info-circle"></i> 例如：请假1天就是1天0小时；请假1天半写1天4小时</p>
                     </div>
                     <div class="b-div">
                         <span class="b-label">
@@ -479,6 +514,7 @@
 @section Modal {
     @Html.Partial("_SelectDep")
     @Html.Partial("_SelectUsers")
+    @Html.Partial("_SelectItems")
     @Html.Partial("_ConfirmDialog")
     @Html.Partial("_MessageDialog")
 }
