--- a/EmpInfo/Views/Home/Index.cshtml
+++ b/EmpInfo/Views/Home/Index.cshtml
@@ -320,16 +320,16 @@
             </div>
         </div>
     </div>   
-    <div class="col-xs-6 col-sm-4">
+    @*<div class="col-xs-6 col-sm-4">
         <div class="thumbnail">
             <a href="#" id="ResImg"><img src="@Url.Content("~/Content/images/res_256.png")" alt="res" ></a>
             <div class="caption">
                 <h3>会所订餐</h3>
-                @*<p>可以在会所进行订餐，并查询自己的订餐记录</p>
-                <p><button class="btn btn-primary btn-block disabled" id="ResBt">进入系统(待开放)</button></p>*@
+                <p>可以在会所进行订餐，并查询自己的订餐记录</p>
+                <p><button class="btn btn-primary btn-block disabled" id="ResBt">进入系统(待开放)</button></p>
             </div>
         </div>
-    </div>
+    </div>*@
     if (auts.IndexOf("AdminIndex") >= 0)
     {
     <div class="col-xs-6 col-sm-4">
