--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -34,8 +34,7 @@
 
             //请假报表
             $("#alReport").on("click", function () {
-                var w = $(document).width();
-                console.log("width:"+w);
+                var w = $(document).width();                
                 if (w > 900) {
                     window.location.href = "@Url.Content("~/Report/ALReport")";
                 } else {
@@ -57,12 +56,12 @@
     <div class="panel-body" id="workGroup">
         <div class="row" style="margin: 0;">            
             <div class="col-xs-4 col-sm-3 col-md-2">
-                <a href="@Url.Content("~/Apply/AskLeaveIndex")">
+                <a href="@string.Concat(Url.Content("~/Apply/ApplyIndex?billType=AL&billName="),Uri.EscapeDataString("请假申请单"))">
                     <img src="@Url.Content("~/Content/images/leave.png")" alt="leave" class="center-block" />
-                    <p class="text-center">请假申请单</p>
+                    <p class="text-center">请假申请</p>
                 </a>
             </div>
-            @if ((bool)ViewData["isDepAdmin"]) { 
+            @if ((bool)ViewData["isDepReporter"]) { 
                 <div class="col-xs-4 col-sm-3 col-md-2">
                     <a id="alReport" href="#">
                         <img src="@Url.Content("~/Content/images/report.png")" alt="leave" class="center-block" />
@@ -78,12 +77,20 @@
             </div>
             @*@if (auts.IndexOf("ModuelTest") >= 0) {*@
                 <div class="col-xs-4 col-sm-3 col-md-2">
-                    <a href="@Url.Content("~/Apply/StockAdminIndex")">
+                    <a href="@string.Concat(Url.Content("~/Apply/ApplyIndex?billType=SA&billName="), Uri.EscapeDataString("仓管权限申请"))">
                         <img src="@Url.Content("~/Content/images/stock.png")" alt="leave" class="center-block" />
                         <p class="text-center">仓管权限申请</p>
                     </a>
                 </div>
             @*}*@
+            @if (auts.IndexOf("StockBillAudit1") >= 0) {
+                <div class="col-xs-4 col-sm-3 col-md-2">
+                    <a href="@Url.Content("~/K3/StockBillAudit")">
+                        <img src="@Url.Content("~/Content/images/paper.png")" alt="leave" class="center-block" />
+                        <p class="text-center">出库单一审</p>
+                    </a>
+                </div>
+            }
         </div>
     </div>
 </div>
