--- a/EmpInfo/Views/Shared/_ConfirmDialog.cshtml
+++ b/EmpInfo/Views/Shared/_ConfirmDialog.cshtml
@@ -9,7 +9,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="confirmModalLabel"><i class="fa fa-question-circle"></i> <span id="cf_text_title">操作确认</span></h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="max-height:400px;overflow:auto;">
                 <p id="confirm_content" class="text-danger"></p>
             </div>
             <div class="modal-footer">
