--- a/EmpInfo/Views/Shared/_SelectDep.cshtml
+++ b/EmpInfo/Views/Shared/_SelectDep.cshtml
@@ -28,6 +28,7 @@
             return;
         }
         $.post(sdurl, {}, function (data) {
+            $("#loadingIcon").remove();
             $("#depTree").treeview({
                 levels:1,
                 data: data,
@@ -68,6 +69,7 @@
             </div>
             <div class="modal-body" style="min-height:280px;max-height:400px;overflow:auto;">
                 <p class="small text-danger"><i class="fa fa-info-circle"></i> 点击文件夹图标可展开子部门，选择正确部门后点击确认按钮返回。</p>
+                <div id="loadingIcon" style="padding-left:20px;"><i class="fa fa-spinner fa-pulse fa-2x"></i> 加载中...</div>
                 <div id="depTree"></div>
 
             </div>
