--- a/EmpInfo/Views/Shared/_Layout.cshtml
+++ b/EmpInfo/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
     <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
     <script src="@Url.Content("~/Scripts/toastr.min.js")"></script>
     <script src="@Url.Content("~/Scripts/icheck.js")"></script>
+    <script src="@Url.Content("~/Scripts/placeholders.js")"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
